[package]
name = "mc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
obj-exporter = "*"

[dev-dependencies]
rapier3d = { version = "*", features = ["simd-stable"] }
kiss3d = "0.32"
